Fix field value pairs overlapping on smaller screens by placing them vertically

--- a/app/recordtransfer/static/recordtransfer/css/submission_form/review_step.css
+++ b/app/recordtransfer/static/recordtransfer/css/submission_form/review_step.css
@@ -78,3 +78,10 @@ dd {
 .align-center {
     align-self: center;
 }
+
+@media (max-width: 500px) {
+    .field-list {
+        display: block !important;
+        transition: display 0.3s ease;
+    }
+}
